--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -64,6 +64,7 @@ requirements:
     - libvorbis
     - openal-soft
     - openssl
+    - imath
     - openexr
     - tifffile
     - zlib
@@ -81,7 +82,6 @@ requirements:
     - tifffile
     # Explicit dso
     - libtiff
-    - ilmbase
     - libffi
     - ncurses          # [not win]
     - readline         # [not win]
