MNT: Re-rendered with conda-build 3.21.8, conda-smithy 3.19.0, and conda-forge-pinning 2022.04.09.19.01.16

--- a/.ci_support/linux_64_openssl3python3.10.____cpython.yaml
+++ b/.ci_support/linux_64_openssl3python3.10.____cpython.yaml
@@ -20,12 +20,14 @@ ffmpeg:
 - '4.4'
 freetype:
 - '2'
+imath:
+- '3.1'
 jpeg:
 - '9'
 libpng:
 - '1.6'
 openexr:
-- '2.5'
+- '3.1'
 openssl:
 - '3'
 pin_run_as_build:
