--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -46,6 +46,7 @@ requirements:
     - {{ cdt('libxext') }}                # [linux]
     - {{ cdt('libxcb') }}                 # [linux]
     - {{ cdt('xorg-x11-proto-devel') }}   # [linux]
+    - bison                               # [linux]
     - python                              # [build_platform != target_platform]
     - cross-python_{{ target_platform }}  # [build_platform != target_platform]
     - numpy                               # [build_platform != target_platform]
