--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "panda3d" %}
-{% set version = "1.10.12" %}
+{% set version = "1.10.7" %}
 
 package:
   name: {{ name|lower }}
@@ -7,19 +7,26 @@ package:
 
 source:
   - url: https://github.com/{{ name }}/{{ name }}/archive/v{{ version }}.tar.gz
-    sha256: 023046fb5bde770a6b41500fee5bf9aa5d99166bf5c95f454cfd46cd2edc9254
+    sha256: b189313c4e9548e20b0facb0c078636e39467b149000919b80a7dd90b35a1939
     patches:
       - patches/osx_python_dep.patch  # [osx]
   # Additional tools
   - url: https://www.panda3d.org/download/{{ name }}-{{ version }}/{{ name }}-{{ version }}-tools-mac.tar.gz  # [osx]
-    sha256: 9d9ca90998354da551ca43a3e43448012f8b66e9750d56316506ec1f3b096e66  # [osx]
+    sha256: 8450221d34c413c3d7c6ed402d9ede1c8b119f271c92984b5cd82ecba0fb3323                                  # [osx]
+  # - url: https://www.panda3d.org/download/{{ name }}-{{ version }}/{{ name }}-{{ version }}-tools-win32.zip   # [win32]
+  #   sha256: 06e77af615effed38066d665af0d0585d7fc1964b53d4915552fece6b8519d5c                                  # [win32]
+  # - url: https://www.panda3d.org/download/{{ name }}-{{ version }}/{{ name }}-{{ version }}-tools-win64.zip   # [win64]
+  #   sha256: 449bdbcad58014a4184cff78be86d5c97c70d0baf6c99af6062e20231f09e3a8                                  # [win64]
 
 build:
-  number: 7
-  skip: true  # [win]
+  number: 0
+  skip: True  # [win]
+  skip: True  # [py<36]
+  # The following skip will be removed in the feedstock
+  skip: True  # [py>36]
   run_exports:
     - {{ pin_subpackage(name|lower, max_pin='x.x') }}
-  missing_dso_whitelist:   # [osx]
+  missing_dso_whitelist:                 # [osx]
     - Frameworks/Cg.framework/Cg         # [osx]
 
 requirements:
@@ -28,11 +35,11 @@ requirements:
     - {{ compiler('cxx') }}              # [not win]
     - make                               # [not win]
     - rsync                              # [not win]
-    - vs2017_win-64                      # [win64]
-    - vs2017_win-32                      # [win32]
     - cmake
     - pkg-config
     - doxygen
+    # - vs2017_win-64                      # [win64]
+    # - vs2017_win-32                      # [win32]
     - {{ cdt('mesa-dri-drivers') }}      # [linux]
     - {{ cdt('mesa-libgl-devel') }}      # [linux]
     - {{ cdt('mesa-libegl-devel') }}     # [linux]
@@ -54,12 +61,12 @@ requirements:
     - bullet
     - ffmpeg
     - freetype
-    - libjpeg-turbo
+    - jpeg
     - libpng
     - libvorbis
     - openal-soft
     - openssl
-    - openexr  2.5.5
+    - openexr
     - tifffile
     - zlib
     # Other packages
