--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "panda3d" %}
-{% set version = "1.10.7" %}
+{% set version = "1.10.13" %}
 
 package:
   name: {{ name|lower }}
@@ -7,66 +7,61 @@ package:
 
 source:
   - url: https://github.com/{{ name }}/{{ name }}/archive/v{{ version }}.tar.gz
-    sha256: b189313c4e9548e20b0facb0c078636e39467b149000919b80a7dd90b35a1939
+    sha256: b865882d8cbb44e7a9b1e030ecc071e689391644eb68b0d8ed78b970e8d4d2c7
     patches:
       - patches/osx_python_dep.patch  # [osx]
   # Additional tools
   - url: https://www.panda3d.org/download/{{ name }}-{{ version }}/{{ name }}-{{ version }}-tools-mac.tar.gz  # [osx]
-    sha256: 8450221d34c413c3d7c6ed402d9ede1c8b119f271c92984b5cd82ecba0fb3323                                  # [osx]
-  # - url: https://www.panda3d.org/download/{{ name }}-{{ version }}/{{ name }}-{{ version }}-tools-win32.zip   # [win32]
-  #   sha256: 06e77af615effed38066d665af0d0585d7fc1964b53d4915552fece6b8519d5c                                  # [win32]
-  # - url: https://www.panda3d.org/download/{{ name }}-{{ version }}/{{ name }}-{{ version }}-tools-win64.zip   # [win64]
-  #   sha256: 449bdbcad58014a4184cff78be86d5c97c70d0baf6c99af6062e20231f09e3a8                                  # [win64]
+    sha256: a626a087d2134ae98b876d663a0c9695f7ee197e13c0c3be6eb978dd99699825  # [osx]
 
 build:
   number: 0
-  skip: True  # [win]
-  skip: True  # [py<36]
-  # The following skip will be removed in the feedstock
-  skip: True  # [py>36]
+  skip: true  # [win]
   run_exports:
     - {{ pin_subpackage(name|lower, max_pin='x.x') }}
-  missing_dso_whitelist:                 # [osx]
+  missing_dso_whitelist:   # [osx]
     - Frameworks/Cg.framework/Cg         # [osx]
 
 requirements:
   build:
-    - {{ compiler('c') }}                # [not win]
-    - {{ compiler('cxx') }}              # [not win]
-    - make                               # [not win]
-    - rsync                              # [not win]
+    - {{ compiler('c') }}                 # [not win]
+    - {{ compiler('cxx') }}               # [not win]
+    - make                                # [not win]
+    - rsync                               # [not win]
+    - vs2017_win-64                       # [win64]
+    - vs2017_win-32                       # [win32]
     - cmake
     - pkg-config
     - doxygen
-    # - vs2017_win-64                      # [win64]
-    # - vs2017_win-32                      # [win32]
-    - {{ cdt('mesa-dri-drivers') }}      # [linux]
-    - {{ cdt('mesa-libgl-devel') }}      # [linux]
-    - {{ cdt('mesa-libegl-devel') }}     # [linux]
-    - {{ cdt('libselinux-devel') }}      # [linux]
-    - {{ cdt('libxdamage-devel') }}      # [linux]
-    - {{ cdt('libx11-devel') }}          # [linux]
-    - {{ cdt('libxfixes-devel') }}       # [linux]
-    - {{ cdt('libxau-devel') }}          # [linux]
-    - {{ cdt('libxfixes') }}             # [linux]
-    - {{ cdt('libxxf86vm') }}            # [linux]
-    - {{ cdt('libxext') }}               # [linux]
-    - {{ cdt('libxcb') }}                # [linux]
-    - {{ cdt('xorg-x11-proto-devel') }}  # [linux]
+    - {{ cdt('mesa-dri-drivers') }}       # [linux]
+    - {{ cdt('mesa-libgl-devel') }}       # [linux]
+    - {{ cdt('mesa-libegl-devel') }}      # [linux]
+    - {{ cdt('libselinux-devel') }}       # [linux]
+    - {{ cdt('libxdamage-devel') }}       # [linux]
+    - {{ cdt('libx11-devel') }}           # [linux]
+    - {{ cdt('libxfixes-devel') }}        # [linux]
+    - {{ cdt('libxau-devel') }}           # [linux]
+    - {{ cdt('libxfixes') }}              # [linux]
+    - {{ cdt('libxxf86vm') }}             # [linux]
+    - {{ cdt('libxext') }}                # [linux]
+    - {{ cdt('libxcb') }}                 # [linux]
+    - {{ cdt('xorg-x11-proto-devel') }}   # [linux]
+    - bison                               # [linux]
   host:
     - python
+    - numpy
     # Package to specify to panda3d
     - eigen
     - assimp
     - bullet
     - ffmpeg
     - freetype
-    - libjpeg-turbo
+    - jpeg
     - libpng
     - libvorbis
     - openal-soft
     - openssl
-    - openexr
+    - openexr  2.5.5
     - tifffile
     - zlib
     # Other packages
