Fuse with bullet

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -42,7 +42,7 @@ requirements:
     # Package to specify to panda3d
     - eigen
     - assimp
-    - bullet
+    - bullet-cpp
     - ffmpeg
     - freetype
     - libjpeg-turbo
@@ -73,7 +73,6 @@ requirements:
   run:
     - python
     # Run dep
-    - bullet
     - ffmpeg
     - openal-soft
     - openssl
