--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -51,7 +51,7 @@ requirements:
     - libvorbis
     - openal-soft
     - openssl
-    - openexr
+    - openexr  2.5.5
     - tifffile
     - zlib
     # Other packages
