--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,7 +15,7 @@ source:
     sha256: e172d1941a7be1d072de466bc0ea29a8d0d71e16a9aed45b86f69f177ad2813a  # [osx]
 
 build:
-  number: 1
+  number: 2
   skip: true  # [win]
   run_exports:
     - {{ pin_subpackage(name|lower, max_pin='x.x') }}
@@ -24,12 +24,10 @@ build:
 
 requirements:
   build:
-    - {{ compiler('c') }}                 # [not win]
-    - {{ compiler('cxx') }}               # [not win]
+    - {{ compiler('c') }}
+    - {{ compiler('cxx') }}
     - make                                # [not win]
     - rsync                               # [not win]
-    - vs2017_win-64                       # [win64]
-    - vs2017_win-32                       # [win32]
     - cmake
     - pkg-config
     - doxygen
