--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,3 +1,5 @@
+build_platform: {osx_arm64: osx_64, linux_aarch64: linux_64, linux_ppc64le: linux_64}
+provider: {linux_aarch64: default, linux_ppc64le: default}
 conda_forge_output_validation: true
 github:
   branch_name: main
@@ -5,3 +7,4 @@ github:
 conda_build:
   pkg_format: '2'
 conda_build_tool: rattler-build
+test: native_and_emulated
