--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -6,3 +6,8 @@ conda_build:
   pkg_format: '2'
 conda_build_tool: rattler-build
 test: native_and_emulated
+azure:
+  settings_win:
+    variables:
+      CONDA_BLD_PATH: "C:\\bld"
+      MINIFORGE_HOME: "C:\\Miniforge"
