Update recipe.yaml to clean exclude

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -27,11 +27,12 @@ build:
     exclude:
       - if: unix
         then:
-        - "lib/python*/site-packages/deploy_libs/**/*"
-        - "lib/python*/site-packages/direct/**/*"
-        - "lib/python*/site-packages/panda3d_tools/**/*"
-        - "lib/python*/site-packages/pandac/**/*"
-        - "**/__pycache__/**/*"
+        - lib/python*/site-packages/deploy_libs/**/*
+        - lib/python*/site-packages/direct/**/*
+        - lib/python*/site-packages/panda3d_tools/**/*
+        - lib/python*/site-packages/pandac/**/*
+        - lib/**/__pycache__/**/*
+        - share/**/__pycache__/**/*
 
 requirements:
   build:
