--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -25,14 +25,11 @@ build:
         - Frameworks/Cg.framework/Cg
   files:
     exclude:
-      - if: unix
-        then:
-        - lib/python*/site-packages/deploy_libs/**/*
-        - lib/python*/site-packages/direct/**/*
-        - lib/python*/site-packages/panda3d_tools/**/*
-        - lib/python*/site-packages/pandac/**/*
-        - lib/**/__pycache__/**/*
-        - share/**/__pycache__/**/*
+      - lib/python*/site-packages/deploy_libs/**/*
+      - lib/python*/site-packages/direct/**/*
+      - lib/python*/site-packages/panda3d_tools/**/*
+      - lib/python*/site-packages/pandac/**/*
+      - "**/*.pyc"
 
 requirements:
   build:
