--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -11,3 +11,6 @@ azure:
     variables:
       CONDA_BLD_PATH: "C:\\bld"
       MINIFORGE_HOME: "C:\\Miniforge"
+build_platform:
+  osx_arm64: osx_64
+test: native_and_emulated
