try linux-aarch64 support as well for debugging locally

--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -13,3 +13,6 @@ azure:
       MINIFORGE_HOME: "C:\\Miniforge"
 build_platform:
   osx_arm64: osx_64
+  linux_aarch64: linux_64
+provider:
+  linux_aarch64: default  
