fix host minimalist build for build tools

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -73,10 +73,10 @@ requirements:
     - cmake
     - pkg-config
     - doxygen
+    - python
     - if: build_platform != target_platform
       then:
-        - python
-        - numpy
+        - zlib
   host:
     - libogg
     - pillow
